changed to monorepo

--- a/package.json
+++ b/package.json
@@ -3,39 +3,28 @@
   "version": "1.0.0",
   "description": "Bitcoin Payment Gateway for Small Businesses - The Stripe of Bitcoin",
   "private": true,
-  "workspaces": [
-    "smartcontracts",
-    "backend",
-    "frontend",
-    "dashboard",
-    "sdk"
-  ],
+  "packageManager": "pnpm@8.15.0",
   "scripts": {
-    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\" \"npm run dev:dashboard\"",
-    "dev:backend": "cd backend && npm run dev",
-    "dev:frontend": "cd frontend && npm run dev",
-    "dev:dashboard": "cd dashboard && npm run dev",
-    "build": "npm run build:backend && npm run build:frontend && npm run build:dashboard && npm run build:sdk",
-    "build:backend": "cd backend && npm run build",
-    "build:frontend": "cd frontend && npm run build",
-    "build:dashboard": "cd dashboard && npm run build",
-    "build:sdk": "cd sdk && npm run build",
-    "test": "npm run test:backend && npm run test:frontend && npm run test:dashboard",
-    "test:backend": "cd backend && npm test",
-    "test:frontend": "cd frontend && npm test",
-    "test:dashboard": "cd dashboard && npm test",
-    "lint": "npm run lint:backend && npm run lint:frontend && npm run lint:dashboard",
-    "lint:backend": "cd backend && npm run lint",
-    "lint:frontend": "cd frontend && npm run lint",
-    "lint:dashboard": "cd dashboard && npm run lint",
-    "install:all": "npm install && npm run install:backend && npm run install:frontend && npm run install:dashboard && npm run install:sdk",
-    "install:backend": "cd backend && npm install",
-    "install:frontend": "cd frontend && npm install",
-    "install:dashboard": "cd dashboard && npm install",
-    "install:sdk": "cd sdk && npm install"
+    "dev": "turbo run dev --parallel",
+    "build": "turbo run build",
+    "lint": "turbo run lint",
+    "test": "turbo run test",
+    "type-check": "turbo run type-check",
+    "clean": "turbo run clean",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "bit:start": "bit start",
+    "bit:compile": "bit compile",
+    "bit:export": "bit export",
+    "bit:build": "bit build",
+    "bit:tag": "bit tag",
+    "bit:install": "bit install"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "@turbo/gen": "^1.12.4",
+    "turbo": "^1.12.4",
+    "prettier": "^3.1.1",
+    "typescript": "^5.3.3",
+    "@types/node": "^20.10.5"
   },
   "keywords": [
     "bitcoin",
