--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "turbo": "^1.12.4",
     "prettier": "^3.1.1",
     "typescript": "^5.3.3",
-    "@types/node": "^20.10.5"
+    "@types/node": "^20.10.5",
+    "@types/minimatch": "^5.1.2"
   },
   "keywords": [
     "bitcoin",
