Update dependencies and configuration for backend and SDK
- Added '@types/minimatch' and updated '@types/node' in pnpm-lock.yaml and package.json
- Updated ESLint and TypeScript configurations in various tsconfig.json files
- Refactored import statements in database.ts for cleaner code
- Removed obsolete railway.json and render.yaml files
- Adjusted file paths in backend package.json scripts for consistency

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -1,10 +1,11 @@
 {
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
     "lib": ["ES2020"],
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "./",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -13,9 +14,19 @@
     "moduleResolution": "node",
     "declaration": true,
     "declarationMap": true,
-    "sourceMap": true,
-    "typeRoots": ["./src/types", "./node_modules/@types"]
+    "sourceMap": true
   },
-  "include": ["src/**/*", "src/types/**/*.d.ts"],
-  "exclude": ["node_modules", "dist"]
+  "include": [
+    "app.ts",
+    "config/**/*",
+    "middleware/**/*",
+    "models/**/*",
+    "routes/**/*",
+    "services/**/*",
+    "utils/**/*",
+    "workers/**/*",
+    "scripts/**/*",
+    "types/**/*.d.ts"
+  ],
+  "exclude": ["node_modules", "dist", "*.test.ts", "*.spec.ts"]
 }
