--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,8 +7,8 @@
     "dev": "nodemon --exec ts-node app.ts",
     "build": "tsc",
     "start": "node dist/app.js",
-    "worker:monitor": "ts-node src/workers/payment-monitor.ts",
-    "db:migrate": "ts-node src/scripts/migrate.ts",
+    "worker:monitor": "ts-node workers/payment-monitor.ts",
+    "db:migrate": "ts-node scripts/migrate.ts",
     "test": "jest",
     "lint": "eslint . --max-warnings 0",
     "type-check": "tsc --noEmit",
@@ -41,10 +41,13 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
-    "@types/node": "^20.10.5",
+    "@types/node": "^20.19.19",
     "@types/pg": "^8.15.5",
     "@types/qrcode": "^1.5.5",
     "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0",
+    "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
