--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -6,8 +6,12 @@
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "composite": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
+  "references": [
+    { "path": "../utils" }
+  ]
 }
