Update project configuration and dependencies
- Added .turbo/ to .gitignore for Turbo cache exclusion
- Included tailwindcss-animate package in dashboard dependencies
- Enhanced tsconfig.json files across multiple packages for better TypeScript support
- Updated index.ts in ui package to export additional Card components
- Adjusted noEmit settings in tsconfig.json files for various packages

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ out/
 .next/
 .vercel/
 
+# Turbo cache
+.turbo/
+
 # IDE and editor files
 .vscode/
 .idea/
@@ -78,7 +81,9 @@ jspm_packages/
 
 # Stacks specific
 .clarinet/
-.clarinet/
+
+# Next.js generated files
+next-env.d.ts
 
 # Security and secrets
 *.key
@@ -94,3 +99,37 @@ wallet.json
 # Temporary folders
 tmp/
 temp/
+
+# TypeScript build info
+*.tsbuildinfo
+
+# ESLint cache
+.eslintcache
+
+# Prettier cache
+.prettiercache
+
+# Stylelint cache
+.stylelintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# dotenv environment variable files (additional)
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
+# yarn v2
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
