--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -12,12 +12,13 @@
     "clean": "rm -rf .next"
   },
   "dependencies": {
+    "@stackspay/sdk": "workspace:*",
     "@stackspay/ui": "workspace:*",
     "@stackspay/utils": "workspace:*",
-    "@stackspay/sdk": "workspace:*",
     "next": "^14.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
