--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "prettier": "^3.1.1",
     "typescript": "^5.3.3",
     "@types/node": "^20.10.5",
-    "@types/minimatch": "^5.1.2"
+    "@types/minimatch": "^5.1.2",
+    "eslint": "^8.56.0",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0"
   },
   "keywords": [
     "bitcoin",
