--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -23,10 +23,10 @@
     "clsx": "^2.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.1",
     "tsup": "^8.0.1",
-    "eslint": "^8.56.0",
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
-    "@typescript-eslint/parser": "^6.16.0"
+    "typescript": "^5.3.3"
   }
 }
