Refactor ESLint configurations and update linting scripts across multiple packages
- Removed '@typescript-eslint/recommended' from ESLint configurations in various packages
- Disabled 'no-unused-vars' rule in ESLint configurations
- Updated linting scripts to specify file extensions and ignore patterns in backend, sdk, ui, and widget packages
- Cleaned up unused imports in several TypeScript files

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -10,7 +10,7 @@
     "worker:monitor": "ts-node workers/payment-monitor.ts",
     "db:migrate": "ts-node scripts/migrate.ts",
     "test": "jest",
-    "lint": "eslint . --max-warnings 0",
+    "lint": "eslint . --ext .ts,.tsx --max-warnings 0 --ignore-pattern dist/",
     "type-check": "tsc --noEmit",
     "clean": "rm -rf dist"
   },
