--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup",
-    "lint": "eslint . --max-warnings 0",
+    "lint": "eslint src --ext .ts,.tsx --max-warnings 0",
     "type-check": "tsc --noEmit",
     "clean": "rm -rf dist"
   },
