--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,9 +46,9 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Deploy to Sevalla
-        uses: sevalla/deploy-action@v1
+        uses: kinsta/github-action@v1.0.0
         with:
-          sevalla-token: ${{ secrets.SEVALLA_TOKEN }}
+          kinsta-token: ${{ secrets.SEVALLA_TOKEN }}
           app-name: stackspay-backend
           config-file: apps/backend/sevalla.yaml
           environment: production
@@ -61,9 +61,9 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Deploy Database to Sevalla
-        uses: sevalla/database-action@v1
+        uses: kinsta/github-action@v1.0.0
         with:
-          sevalla-token: ${{ secrets.SEVALLA_TOKEN }}
+          kinsta-token: ${{ secrets.SEVALLA_TOKEN }}
           database-name: stackspay-database
           config-file: apps/backend/sevalla-database.yaml
 
@@ -75,9 +75,9 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Deploy Redis to Sevalla
-        uses: sevalla/redis-action@v1
+        uses: kinsta/github-action@v1.0.0
         with:
-          sevalla-token: ${{ secrets.SEVALLA_TOKEN }}
+          kinsta-token: ${{ secrets.SEVALLA_TOKEN }}
           redis-name: stackspay-redis
           config-file: apps/backend/sevalla-redis.yaml
 
@@ -95,7 +95,7 @@ jobs:
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_DASHBOARD_PROJECT_ID }}
           working-directory: ./apps/dashboard
-          vercel-args: '--prod'
+          vercel-args: '--prod --yes --confirm'
 
   deploy-docs:
     needs: build-and-test
@@ -111,7 +111,7 @@ jobs:
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_DOCS_PROJECT_ID }}
           working-directory: ./apps/docs
-          vercel-args: '--prod'
+          vercel-args: '--prod --yes --confirm'
 
   publish-packages:
     needs: build-and-test
