--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,7 +46,7 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Deploy to Sevalla
-        uses: kinsta/github-action@v1.0.0
+        uses: sevalla-hosting/sevalla-deploy@v1.0.0
         with:
           kinsta-token: ${{ secrets.SEVALLA_TOKEN }}
           app-name: stackspay-backend
@@ -61,7 +61,7 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Deploy Database to Sevalla
-        uses: kinsta/github-action@v1.0.0
+        uses: sevalla-hosting/sevalla-deploy@v1.0.0
         with:
           kinsta-token: ${{ secrets.SEVALLA_TOKEN }}
           database-name: stackspay-database
@@ -75,7 +75,7 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Deploy Redis to Sevalla
-        uses: kinsta/github-action@v1.0.0
+        uses: sevalla-hosting/sevalla-deploy@v1.0.0
         with:
           kinsta-token: ${{ secrets.SEVALLA_TOKEN }}
           redis-name: stackspay-redis
@@ -95,7 +95,7 @@ jobs:
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_DASHBOARD_PROJECT_ID }}
           working-directory: ./apps/dashboard
-          vercel-args: '--prod --yes --confirm'
+          vercel-args: '--prod Y --confirm'
 
   deploy-docs:
     needs: build-and-test
@@ -111,7 +111,7 @@ jobs:
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_DOCS_PROJECT_ID }}
           working-directory: ./apps/docs
-          vercel-args: '--prod --yes --confirm'
+          vercel-args: '--prod Y --confirm'
 
   publish-packages:
     needs: build-and-test
