--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -14,7 +14,8 @@
     "moduleResolution": "node",
     "declaration": true,
     "declarationMap": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "noEmit": false
   },
   "include": [
     "app.ts",
