--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
   },
   "devDependencies": {
     "@turbo/gen": "^1.12.4",
-    "turbo": "^1.12.4",
-    "prettier": "^3.1.1",
-    "typescript": "^5.3.3",
-    "@types/node": "^20.10.5",
     "@types/minimatch": "^5.1.2",
-    "eslint": "^8.56.0",
+    "@types/node": "^20.19.19",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
-    "@typescript-eslint/parser": "^6.16.0"
+    "@typescript-eslint/parser": "^6.16.0",
+    "eslint": "^8.56.0",
+    "prettier": "^3.1.1",
+    "turbo": "^1.12.4",
+    "typescript": "^5.9.3"
   },
   "keywords": [
     "bitcoin",
