--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -4,29 +4,34 @@ FROM node:20-alpine AS base
 # Install pnpm globally
 RUN npm install -g pnpm@8.15.0
 
-# Set working directory
 WORKDIR /app
 
-# Copy root package files
-COPY package.json pnpm-lock.yaml ./
+# --- Dependencies stage ---
+FROM base AS dependencies
 
-# Copy backend and shared packages manifests
+# Copy workspace configuration
+COPY package.json pnpm-lock.yaml pnpm-workspace.yaml* ./
+
+# Copy all package.json files for proper dependency resolution
 COPY apps/backend/package.json ./apps/backend/
 COPY packages/ ./packages/
 
-# Install all dependencies (including dev for building)
+# Install ALL dependencies (including devDependencies for building)
 RUN pnpm install --frozen-lockfile
 
 # --- Build stage ---
-FROM base AS build
+FROM dependencies AS build
 
-# Copy all necessary source files for build
-COPY . .
+# Now copy source files (node_modules already exist from previous stage)
+COPY apps/backend ./apps/backend
+COPY packages ./packages
+COPY turbo.json* ./
 
-RUN pnpm install --frozen-lockfile --recursive
-
-# ✅ Build backend specifically
+# Build the backend
 RUN pnpm --filter @stackspay/backend run build
+
+# Verify build output exists
+RUN ls -la /app/apps/backend/dist || (echo "Build failed - dist directory not found" && exit 1)
 
 # --- Production stage ---
 FROM node:20-alpine AS production
@@ -36,19 +41,24 @@ RUN addgroup -g 1001 -S nodejs && adduser -S stackspay -u 1001
 
 WORKDIR /app
 
-# Copy only package manifests
-COPY package.json pnpm-lock.yaml ./
-COPY apps/backend/package.json ./apps/backend/
+# Copy workspace configuration
+COPY package.json pnpm-lock.yaml pnpm-workspace.yaml* ./
 
-# Install only production dependencies
+# Copy package manifests
+COPY apps/backend/package.json ./apps/backend/
+COPY packages/ ./packages/
+
+# Install ONLY production dependencies
 ENV NODE_ENV=production
 RUN pnpm install --frozen-lockfile --prod
 
 # Copy built application from build stage
 COPY --from=build /app/apps/backend/dist ./apps/backend/dist
+
+# Copy any shared packages that might be needed at runtime
 COPY --from=build /app/packages ./packages
 
-# Permissions
+# Set ownership
 RUN chown -R stackspay:nodejs /app
 USER stackspay
 
