--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -14,19 +14,20 @@
   "dependencies": {
     "@stackspay/ui": "workspace:*",
     "@stackspay/utils": "workspace:*",
-    "next": "^14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "^15.5.4",
     "nextra": "^2.13.2",
-    "nextra-theme-docs": "^2.13.2"
+    "nextra-theme-docs": "^2.13.2",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20.10.5",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
+    "@tailwindcss/postcss": "^4.1.14",
+    "@types/node": "^24.7.2",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.1",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.0.4",
+    "eslint": "^9.37.0",
+    "eslint-config-next": "^15.5.4",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
