Update frontend components and styles for enhanced UI and functionality
- Added framer-motion and lucide-react as dependencies in package.json for improved animations and icons.
- Updated tailwind.config.js to include new color and shadow utilities for a refined design.
- Refactored App component to include new HomePage and ThemedWidgetDemo routes.
- Enhanced PaymentWidget and PaymentButton components with motion effects and improved styling.
- Introduced new theme configuration options in ThemeConfig for better customization.
- Updated QRCode and StatusIndicator components to utilize framer-motion for smoother transitions.

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -17,6 +17,8 @@
     "@stackspay/ui": "workspace:*",
     "@stackspay/utils": "workspace:*",
     "@stackspay/widget": "workspace:*",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.545.0",
     "qrcode": "^1.5.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
