--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -4,7 +4,7 @@
   "description": "StackPay merchant dashboard",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
